# reports-de-voix

./: .gitignore  README.md  pyproject.toml  rapport.ipynb
.github/: publier_site.py
.github/workflows/: pages.yml
data/: reports_legislatives_2024.parquet  sensibilites_nfp.csv
generation/: donnees.py  estimer.py  graphiques.py  rapport.py  reports_legislatives_2024.parquet  verifier.py  verifier_claims.py
src/reports_de_voix/: __init__.py  algorithme.py  cli.py  donnees.py  estimer.py  graphiques.py  tables.py  test_algorithme.py  verifier_claims.py
